Update CORS config